syntax = "proto3";

package mutualexclusion;

service MutualExclusion {
  rpc RequestAccess(Request) returns (Response);
  rpc ReleaseAccess(Release) returns (Response);
}

message Request {
  string node_id = 1;
  int64 timestamp = 2;
}

message Release {
  string node_id = 1;
}

message Response {
  bool granted = 1;
}